# cpp-course

./: .gitignore
000_Lesson1/: CMakeLists.txt
000_Lesson1/include/: SquareEquation.h
000_Lesson1/src/: SquareEquation.cpp
001_Lab1/: CMakeLists.txt
001_Lab1/include/: Analyser.h  WordStats.h
001_Lab1/src/: Analyser.cpp  WordStats.cpp  main.cpp
002_Lab2b/: CMakeLists.txt
002_Lab2b/include/: CircularBuffer.h
002_Lab2b/src/: main.cpp
002_Lab2b/tests/: CMakeLists.txt  CapactiyTest.cpp  ComparisonTest.cpp  CreationTest.cpp  ExceptionsTest.cpp  InfoMethodsTest.cpp  InitAndPushTest.cpp  InsertAndEraseTest.cpp  LinearizeTest.cpp  ResizeTest.cpp  RotationTest.cpp  TestUtils.cpp  TestUtils.h  UniquePtrTest.cpp
003_Lesson2/: CMakeLists.txt  main.cpp
004_Lesson3/: CMakeLists.txt  main.cpp
005_Lab2/: CMakeLists.txt  README.md
005_Lab2/include/: Configurator.h  Decision.h  DetailedGameState.h  EndGameState.h  Game.h  GameRules.h  IGameState.h  IPlayerPlayFacade.h  IPlayerStatusFacade.h  IStrategy.h  KindRepeaterStrategy.h  Player.h  PlayerFactory.h  ProcessGameState.h  TournamentGameState.h
005_Lab2/include/Game/: Game.h
005_Lab2/include/Game/State/: DetailedGameState.h  FastGameState.h  IGameState.h  InitializationGameState.h  ProcessGameState.h  TournamentGameState.h
005_Lab2/include/Player/: IPlayerPlayFacade.h  IPlayerStrategyFacade.h  Player.h  PlayerFactory.h
005_Lab2/include/Player/Strategies/: EvilDumbassStrategy.h  EvilRepeaterStrategy.h  IStrategy.h  InconsistentStrategy.h  KindDumbassStrategy.h  KindForgivingRepeaterStrategy.h  KindRepeaterStrategy.h  RandomStrategy.h
005_Lab2/src/: Configurator.cpp  Decision.cpp  DetailedGameState.cpp  EndGameState.cpp  FastGameState.cpp  Game.cpp  GameRules.cpp  IGameState.cpp  InitializationGameState.cpp  KindRepeaterStrategy.cpp  Player.cpp  PlayerFactory.cpp  ProcessGameState.cpp  TournamentGameState.cpp  main.cpp
005_Lab2/src/Game/: Game.cpp  GameRules.cpp
005_Lab2/src/Game/State/: DetailedGameState.cpp  EndGameState.cpp  FastGameState.cpp  IGameState.cpp  InitializationGameState.cpp  ProcessGameState.cpp  TournamentGameState.cpp
005_Lab2/src/Player/: Player.cpp  PlayerFactory.cpp
005_Lab2/src/Player/Strategies/: EvilDumbassStrategy.cpp  EvilRepeaterStrategy.cpp  InconsistentStrategy.cpp  KindDumbassStrategy.cpp  KindForgivingRepeaterStrategy.cpp  KindRepeaterStrategy.cpp  RandomStrategy.cpp
005_Lab2/tests/: CMakeLists.txt  GameCreationTest.cpp  GameRunTest.cpp  SimulationResultTest.cpp  TestUtils.cpp  TestUtils.h
006_Task4/: CMakeLists.txt
006_Task4/include/: Budget.h  Date.h
006_Task4/src/: Budget.cpp  Date.cpp  main.cpp
007_Task5/: .gitignore  Makefile  main.cpp  module1.cpp  module2.cpp
008_Lab3/: CMakeLists.txt  TODO.md
008_Lab3/include/: AppParameters.h  Application.h  Audio.h  IAudioPoolFacade.h  WavEncoder.h
008_Lab3/include/Commands/: ICommand.h  ICommandFactory.h  InsertCommand.h  InsertCommandFactory.h  MixCommand.h  MixCommandFactory.h  MuteCommand.h  MuteCommandFactory.h
008_Lab3/src/: Application.cpp  Audio.cpp  IAudioPoolFacade.cpp  WavEncoder.cpp  main.cpp
008_Lab3/src/Commands/: ICommand.cpp  ICommandFactory.cpp  InsertCommand.cpp  InsertCommandFactory.cpp  MixCommand.cpp  MixCommandFactory.cpp  MuteCommand.cpp  MuteCommandFactory.cpp
008_Task6/: CMakeLists.txt
008_Task6/include/: EmailNotifier.h  INotifier.h  SmsNotifier.h
008_Task6/src/: EmailNotifier.cpp  SmsNotifier.cpp  main.cpp
010_Task8/: CMakeLists.txt
010_Task8/include/: Formation.h
010_Task8/src/: Formation.cpp  main.cpp
010_Task8/test/: generator.py
011_Task10/: CMakeLists.txt
011_Task10/include/: Document.h  Reader.h  Section.h  Writer.h
011_Task10/src/: Document.cpp  Reader.cpp  Section.cpp  Writer.cpp  main.cpp
012_Task11/: CMakeLists.txt
012_Task11/include/: Email.h  PipelineBuilder.h
012_Task11/include/Workers/: Copier.h  Filter.h  Reader.h  Sender.h  Worker.h
012_Task11/src/: Email.cpp  PipelineBuilder.cpp  main.cpp
012_Task11/src/Workers/: Copier.cpp  Filter.cpp  Reader.cpp  Sender.cpp  Worker.cpp
013_Task12/: CMakeLists.txt
013_Task12/include/: ListAllocator.h  MemoryBlock.h
013_Task12/src/: MemoryBlock.cpp  main.cpp
014_Task13/: CMakeLists.txt
014_Task13/include/: Matrix.h
014_Task13/src/: main.cpp
lessons/000_Lesson1/include/: SquareEquation.h
lessons/000_Lesson1/src/: main.cpp
